--- a/Custom Tiny/tiny.cfg
+++ b/Custom Tiny/tiny.cfg
@@ -1,7 +1,7 @@
 [net]
 # Train
-batch=128
-subdivisions=1
+batch=64
+subdivisions=8
 # Test
 # batch=1
 # subdivisions=1
@@ -160,17 +160,27 @@ pad=1
 activation=leaky
 
 [convolutional]
-filters=1000
+filters=30
 size=1
 stride=1
 pad=1
 activation=linear
 
-[avgpool]
+[region]
+anchors = 1.08,1.19,  3.42,4.41,  6.63,11.38,  9.42,5.11,  16.62,10.52
+bias_match=1
+classes=1
+coords=4
+num=5
+softmax=1
+jitter=.2
+rescore=1
 
-[softmax]
-groups=1
+object_scale=5
+noobject_scale=1
+class_scale=1
+coord_scale=1
 
-[cost]
-type=sse
-
+absolute=1
+thresh = .6
+random=0
