--- a/Custom Tiny/tiny.cfg
+++ b/Custom Tiny/tiny.cfg
@@ -1,27 +1,21 @@
 [net]
-# Train
 batch=64
 subdivisions=8
-# Test
-# batch=1
-# subdivisions=1
-height=224
-width=224
+height=416
+width=416
 channels=3
 momentum=0.9
 decay=0.0005
-max_crop=320
-
-learning_rate=0.1
-policy=poly
-power=4
-max_batches=1600000
-
-angle=7
+angle=0
+saturation = 1.5
+exposure = 1.5
 hue=.1
-saturation=.75
-exposure=.75
-aspect=.75
+
+learning_rate=0.0001
+max_batches = 45000
+policy=steps
+steps=100,25000,35000
+scales=10,.1,.1
 
 [convolutional]
 batch_normalize=1
